[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Objects/Coin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/OtherSounds/OrbPickupSound.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_Coin_01.tscn" type="PackedScene" id=3]

[sub_resource type="SphereMesh" id=6]
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.866667, 0, 1 )
metallic = 1.0
roughness = 0.2

[sub_resource type="SphereShape" id=3]
radius = 0.799025

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spin"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="Coin" type="Spatial" groups=["CoinGroup"]]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.478881, 0, 0, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
playback_speed = 0.01
anims/RESET = SubResource( 4 )
anims/Spin = SubResource( 5 )

[node name="OrbPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[node name="VFX_Coin_01" parent="." instance=ExtResource( 3 )]

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 1, 0.890196, 0, 1 )
light_energy = 0.2
omni_range = 7.0
omni_attenuation = 2.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="finished" from="OrbPickup" to="." method="_on_OrbPickup_finished"]
